<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solitario Celta</string>
    <string name="aboutText">Acerca de</string>
    <string name="aboutMessage">El juego consiste en ir comiendo piezas
    (en horizontal o en vertical) hasta conseguir que sólo quede una pieza
    en el centro. En cada movimiento, la pieza puede saltar solo una pieza.</string>
    <string name="firstCategoryPrefTitle">Datos personales</string>
    <string name="editTextPrefTitle">Nombre del jugador</string>
    <string name="editTextPrefSummary">Pulse para teclear el nombreJugador del jugador</string>
    <string name="secondCategoryPrefTitle">Ajustes del juego</string>
    <string name="preferencesText">Ajustes</string>
    <string name="mejoresResultadosText">Mejores resultados</string>

    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">Fin del juego</string>
    <string name="txtDialogoFinalPregunta">¿Quiere jugar otra partida?</string>
    <string name="txtDialogoFinalAfirmativo">Sí</string>
    <string name="txtDialogoFinalNegativo">No</string>

    <string name="guardarJuegoText">Guardar partida</string>
    <string name="savedGameText">Se ha guardado la partida</string>


    <string name="cargarJuegoText">Recuperar partida</string>
    <string name="txtDialogoCargarTitulo">Cargar partida</string>
    <string name="txtDialogoCargarPregunta">¿Está seguro que quiere cargar una partida?</string>
    <string name="txtDialogoCargarAfirmativo">Sí</string>
    <string name="txtDialogoCargarNegativo">No</string>

    <string name="reiniciarJuegoText">Reiniciar partida</string>
    <string name="txtDialogoReiniciarTitulo">Reiniciar partida</string>
    <string name="txtDialogoReiniciarPregunta">¿Está seguro que quiere reiniciar la partida?</string>
    <string name="txtDialogoReiniciarAfirmativo">Sí</string>
    <string name="txtDialogoReiniciarNegativo">No</string>
    <string name="txtEstadoInicial">La partida ya están en el estado inicial</string>

    <string name="bestResultsText">Mejores Resultados</string>
    <string name="fileNotFoundText">No se ha encontrado el fichero</string>
    <string name="fileEmptyText">El fichero está vacío</string>
    <string name="restoreGameText">Se ha cargado la partida</string>

    <string name="noHayRegistros">Lo sentimos pero no hay registros en la bbdd.</string>
    <string name="borrarTodosText">Borrar Todos</string>
    <string name="txtDialogoBorrarTitulo">Eliminar los mejores resultados</string>
    <string name="txtDialogoBorrarPregunta">¿Está seguro que quiere borrar los mejores resultados?</string>
    <string name="txtDialogoBorrarAfirmativo">Sí</string>
    <string name="txtDialogoBorrarNegativo">No</string>
    <string name="txtDialogoBorrarText">Se han eliminado los mejores resultados</string>
    <string name="nombreJugadorNumFichasText">%s te quedan %s fichas</string>
</resources>