<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/guardar"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="200"
        android:title="@string/guardarJuegoText"
        app:showAsAction="always" />

    <item
        android:id="@+id/reiniciar"
        android:icon="@android:drawable/ic_popup_sync"
        android:orderInCategory="100"
        android:title="@string/reiniciarJuegoText"
        app:showAsAction="always"/>

    <item
        android:id="@+id/cargar"
        android:icon="@android:drawable/ic_menu_set_as"
        android:orderInCategory="300"
        android:title="@string/cargarJuegoText"/>

    <item
        android:id="@+id/mejoresResultados"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="400"
        android:title="@string/bestResultsText"/>

    <item
        android:id="@+id/preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="500"
        android:title="@string/preferencesText"/>
    <item
        android:id="@+id/menuAbout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="600"
        android:title="@string/aboutText"/>

</menu>